<resources>
    <string name="app_name">NMedia</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="group_avatar">Group\'s profile image</string>
    <string name="post_remove">Remove</string>
    <string name="post_move_up">Move up</string>
    <string name="post_mode_down">Move down</string>
    <string name="notifyAddPost">Enter the text for post…</string>
    <string name="send_post">Send post!</string>
    <string name="back">Back</string>
    <string name="add_photo">Add photo</string>
    <string name="add_image">Add image</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit Post</string>
    <string name="text_is_unfilled">Text is unfilled!</string>
    <string name="text_is_equal">Text hasn\'t changed!</string>
    <string name="post_deleted">Post was successfully deleted!</string>
    <string name="post_title">Post title</string>
    <string name="post_text">Post text</string>
    <string name="channel_remote_name_like">Likes notification</string>
    <string name="channel_remote_name_like_descriptions">Receive notifications of new likes</string>
    <string name="channel_remote_name_new_posts">New posts notification</string>
    <string name="channel_remote_name_new_posts_descriptions">Receive notifications of new posts</string>
    <string name="notification_user_liked">User %1$s liked a post %2$s</string>
    <string name="notification_new_post">User %1$s has published a new post:</string>
    <string name="error_open_url">Couldn\'t open this URL: %1$s</string>
    <string name="newer_posts">Newer posts</string>
    <string name="error_no_internet_connection">Error: No Internet connection</string>
    <string name="error_timed_out_from_response">Timed out waiting for a response from the server</string>
    <string name="error_problem_with_internet_connection">Error: Problem with Internet connection. Check your Internet connection and try again later</string>
    <string name="error_server_respond_error">Server respond an error %1$s: %2$s</string>
    <string name="error_error">Error: %1$s</string>
    <string name="error_user_not_found">User is not found</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="log_in">Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_out">Sign-out</string>
    <string name="auth_login">Enter Login</string>
    <string name="auth_please_signin">Please login or register to continue</string>
    <string name="auth_are_sure">Are you sure?</string>
    <string name="note">Note</string>
    <string name="attachment">Attachment</string>
    <string name="auth_pass">Enter Password</string>
    <string name="chooser_share_post">Share post with your friends!</string>
    <string name="auth_confirm_pass">Confirm Password</string>
    <string name="auth_user_name">Enter Your User Name</string>
    <string name="auth_authorization">Authorization</string>
    <string name="load_more">Load more</string>
    <string name="retry_loading">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="google_play_unavailable">Google Play services are unavailable! Some features may not work!</string>
</resources>