<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/unauthorized">
        <item
            android:id="@+id/login"
            android:icon="@drawable/delete"
            android:title="@string/log_in"
            app:showAsAction="never"/>
        <item
            android:id="@+id/signup"
            android:icon="@drawable/delete"
            android:title="@string/sign_up"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/authorized">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/delete"
            android:title="@string/sign_out"
            app:showAsAction="never"/>
    </group>
</menu>