<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.fragments.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/image"
        app:navigationIcon="@drawable/keyboard_backspace"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:backgroundTint="@color/pink"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAuth"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/auth_login"
                    android:singleLine="true"
                    android:textStyle="normal" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_login"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/auth_user_name"
                    android:singleLine="true"
                    android:textStyle="normal" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_name"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/auth_pass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textStyle="normal" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_password"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/auth_confirm_pass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textStyle="normal" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/push_nmedia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_confirm_pass" />

            <ProgressBar
                android:id="@+id/post_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:elevation="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/card_confirm_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>