<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.edit.EditFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main"
        app:navigationIcon="@drawable/keyboard_backspace"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/ivPostAvatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/group_avatar"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_baseline_account_circle_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPostTitle"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLength="40"
                android:maxLines="1"
                android:text="@string/post_title"
                android:textColorHint="@color/white_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cancelButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/ivPostAvatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/ivPostAvatar"
                app:layout_constraintTop_toBottomOf="@+id/tvPostTitle"
                tools:text="20 Марта, 2020 года" />

            <ImageView
                android:id="@+id/cancelButton"
                android:layout_width="28dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvDateTime"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/close"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/tvPostText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/post_text"
                android:maxLength="4000"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivLikes"
                style="@style/Widget.AppCompat.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checkable="true"
                android:clickable="false"
                android:focusable="false"
                android:text="300"
                android:textSize="20sp"
                app:icon="@drawable/heart_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAttachment"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/heart_outline" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivComments"
                style="@style/Widget.AppCompat.ShareAndCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:text="300"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:icon="@drawable/comment_outline"
                app:layout_constraintStart_toEndOf="@id/ivLikes"
                app:layout_constraintTop_toBottomOf="@+id/ivAttachment"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivShare"
                style="@style/Widget.AppCompat.ShareAndCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:text="300"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:icon="@drawable/share_outline"
                app:layout_constraintStart_toEndOf="@id/ivComments"
                app:layout_constraintTop_toBottomOf="@+id/ivAttachment"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:clickable="false"
                app:layout_constraintEnd_toStartOf="@id/tvViewsCount"
                app:layout_constraintTop_toBottomOf="@+id/ivAttachment"
                app:srcCompat="@drawable/eye"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvViewsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="3dp"
                android:text=" "
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAttachment"
                tools:text="11" />

            <TextView
                android:id="@+id/tvAddNotification"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/notifyAddPost"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivComments"
                tools:text="@string/notifyAddPost" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAttachment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/push_nmedia"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPostText">


            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSendPost"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/lime"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddNotification">

                <TextView
                    android:id="@+id/tvSend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/send_post"
                    android:textColor="@color/black"
                    android:textSize="60sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/post_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/cardViewSendPost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>